# Selenium-Python-Docker-scraper

./: .gitignore  Dockerfile  README.md  fabfile.py  pyproject.toml  requirements.txt
code/: example.py  main.py  shopPurchase.py  test.py
