[tool.poetry]
name = "Selenium python docker scraper"
version = "0.1.0"
description = ""
authors = ["kevinhowbrook <kbhowbrook@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fabric = "^2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
